@@ -13,6 +13,9 @@ PyObjC NEWS</title>
 <ul>
 <li>(UNFINISHED) New RemotePyInterpreter example that demonstrates an
 out-of-process Python interpreter (primarily for IDE uses).</li>
+<li>New HotKeyPython example in AppKit that demonstrates how to use
+Carbon global hot keys from a PyObjC application.  Also demonstrates
+how to use a NSApplication subclass.</li>
 <li>Key-Value Observing support is now automatic in Python classes that
 descend from <code><span>NSObject</span></code>, unless they implement a custom
 <code><span>willChangeValueForKey:</span></code>, <code><span>didChangeValueForKey:</span></code>, or
@@ -20,7 +23,7 @@ descend from <code><span>NSObject</span></code>, unless they implement a custom
 automatically trigger notifications.  This works in all cases,
 whether <code><span>foo</span></code> is a <code><span>property</span></code>, <code><span>ivar</span></code>, or just in the
 <code><span>__dict__</span></code>.</li>
-<li>New <code><span>Inject</span></code> folder in Examples, with a PyInterpreter
+<li>New Inject folder in Examples, with a PyInterpreter
 example that will inject a GUI Python interpreter into any process.</li>
 <li>New <code><span>objc.inject()</span></code> function for Mac OS X 10.3 and later,
 allows an arbitrary bundle to be loaded into another process
